# kontentum-studio

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: PHASE3_SPEC.md  SESSION_SUMMARY.md
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AuthScreen.tsx  BottomBar.tsx  ChatPanel.tsx  ConnectionModal.tsx  Controls.tsx  HeaderBar.tsx  LogPanel.tsx  Preview.tsx  SettingsPanel.tsx  Sidebar.tsx  UpdateBanner.tsx  WelcomeCard.tsx
src/lib/: useAppLogger.ts  useConnectionQuality.ts  useLiveKit.ts  useMediaDevices.ts  useUpdateChecker.ts
src/styles/: global.css
