[package]
name = "kontentum-studio"
version = "0.9.0"
description = "КОНТЕНТУМ Studio — десктопный стриминг-клиент"
authors = ["КОНТЕНТУМ"]
edition = "2021"

[lib]
name = "kontentum_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
